--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,6 +29,8 @@ layout: default
 
                 <hr>
 
+		{% include sharing.html %}
+		    
                 <ul class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
