--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
                     {% if page.subtitle %}
                     <h2 class="subheading">{{ page.subtitle }}</h2>
                     {% endif %}
-                    <span class="meta">escrito por {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} el {{ page.date | date: "%-d %B, %Y" }}</span>
+                    <span class="meta">escrito por {% if page.author %}{{ page.author }}{% else %}{{ site.title }}{% endif %} el {{ page.date | date: "%-d-%m-%Y" }}</span>
                 </div>
             </div>
         </div>
@@ -28,7 +28,7 @@ layout: default
 				{{ content }}
 
                 <hr>
-		    
+
                 <ul class="pager">
                     {% if page.previous.url %}
                     <li class="previous">
