--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 {% include head.html %}
+    
+    <!--Google Page-level ads --> 
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+      google_ad_client: "ca-pub-2111890930335417",
+      enable_page_level_ads: true
+      });
+    </script>
 
 <body>
 
