--- a/_includes/advertisements.html
+++ b/_includes/advertisements.html
@@ -1,3 +1,4 @@
+<center>
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- new -->
 <ins class="adsbygoogle"
@@ -8,3 +9,4 @@
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
+</center>
