--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="{{ site.description }}">
-    
-    <!--Google Page-level ads --> 
+
+    <!--Google Page-level ads -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <script>
       (adsbygoogle = window.adsbygoogle || []).push({
@@ -40,5 +40,7 @@
     <![endif]-->
 
     {% feed_meta %}
+
+    {% include cookieconsent.html %}
 
 </head>
