--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,6 +51,10 @@ layout: default
 {% include advertisements.html %}
 
 <br>
+
+{% include share.html %}
+
+<br>
 <!--  Disqus comments -->
 
   <div id="disqus_thread" class="container"></div>
