--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,6 +24,11 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+              <ul class="tags">
+                {% for tag in page.tags %}
+                  <li><a href="/blog#{{ tag }}" class="tag">{{ tag }}</a></li>
+                {% endfor %}
+              </ul>
 
 				{{ content }}
 
