--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -401,3 +401,55 @@ img::-moz-selection {
 body {
   webkit-tap-highlight-color: #0085a1;
 }
+.tags {
+  list-style: none;
+  margin: 0;
+  overflow: hidden;
+  padding: 0;
+}
+.tags li {
+  float: left;
+}
+.tag {
+  font: 15px/1.5 'PT Sans',serif;
+  background: #767676;
+  border-radius: 3px 0 0 3px;
+  color: #FFFFFF;
+  display: inline-block;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px 0 23px;
+  position: relative;
+  margin: 0 10px 10px 0;
+  text-decoration: none;
+  -webkit-transition: color .2s;
+}
+.tag::before {
+  background: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+  content: '';
+  height: 6px;
+  left: 10px;
+  position: absolute;
+  width: 6px;
+  top: 10px;
+}
+.tag::after {
+  background: #FFFFFF;
+  border-bottom: 13px solid transparent;
+  border-left: 10px solid #767676;
+  border-top: 13px solid transparent;
+  content: '';
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.tag:hover {
+  background-color: #0085a1;
+  color: #fff;
+  text-decoration: none;
+}
+.tag:hover::after {
+   border-left-color: #0085a1;
+}
