--- a/_includes/head.html
+++ b/_includes/head.html
@@ -39,11 +39,11 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    {% if page.header-img %}
-    <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
+    {% if post.header-img %}
+    <meta property="og:image" content="{{ site.url }}/{{ post.header-img }}" />
     {% endif %}
 
-    <meta property="og:description" content="{{ page.subtitle }}" />
+    <meta property="og:description" content="{{ post.subtitle }}" />
 
 
     {% feed_meta %}
