--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
     <meta property="og:image" content="{{ site.url }}/{{ page.header-img }}" />
     {% endif %}
 
-    <meta property="og:description" content="{{ page.subtitle }}" />
+    <meta property="description" content="{{ page.subtitle }}" />
 
     <!--Google Page-level ads -->
     <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
