--- a/_includes/cookieconsent.html
+++ b/_includes/cookieconsent.html
@@ -1,24 +1,20 @@
-<!-- Begin Cookie Consent script https://cookiescript.info/ -->
-<link rel="stylesheet" type="text/css" href="//cookiescriptcdn.pro/libs/cookieconsent.6.min.css" />
-<a id="cookieconsent:learn_more" aria-label="learn more about cookies" role=button tabindex="0" class="cc-link" href="https://cookie-policy.org/" target="_blank">Lea más</a><script>var cookieconsent_ts = 1503196774004; var learnmore2 = document.getElementById("cookieconsent:learn_more");learnmore2.setAttribute("style", "display:none");</script>
-<script src="//cookiescriptcdn.pro/libs/cookieconsent.6.min.js"></script>
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+<script src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
 <script>
 window.addEventListener("load", function(){
 window.cookieconsent.initialise({
   "palette": {
     "popup": {
-      "background": "#000"
+      "background": "#252e39"
     },
     "button": {
-      "background": "#f1d600"
+      "background": "#14a7d0"
     }
   },
   "content": {
-    "message": "Este sitio utiliza cookies para asegurar una mejor experiencia en la navegación.",
+    "message": "Este sitio utiliza cookies para asegurar una mejor experiencia de navegación.\n",
     "dismiss": "Acepto!",
     "link": "Lea más"
   }
 })});
 </script>
-<noscript><a href="https://cookiescript.info/">Cookie consent script</a></noscript>
-<!-- End Cookie Consent script -->
